Fix content sizing and overflow issue
Error in header and content sizing was causing scrolling issues

--- a/src/sass/components/pages/_Home.scss
+++ b/src/sass/components/pages/_Home.scss
@@ -3,7 +3,6 @@
     background: $purple;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     
     &[data-loading=true] {
         &[data-loaded=true] {
@@ -19,9 +18,6 @@
     margin: 0;
     width: 100%;
     height: 200px;
-    position: absolute;
-    top: 0;
-    left: 0;
     padding-top: 20px;
     text-align: center;
 
@@ -34,8 +30,6 @@
 
 .Home__content {
     width: 100%;
-    height: calc(100vh - 200px);
+    min-height: calc(100vh - 200px);
     background: desaturate(darken($purple, 20%), 60%);
-    position: absolute;
-    top: 200px;
 }
