--- a/src/sass/config/_html.scss
+++ b/src/sass/config/_html.scss
@@ -1,4 +1,5 @@
 html {
     color: $white;
     font-family: "Montserrat", sans-serif;
+    overflow-x: hidden;
 }
